--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,7 @@
 @import './_settings.css';
+@import './_colors.css';
+@import './_typography.css';
+@import './_others.css';
+@import './_custom.css';
 @tailwind components;
 @tailwind utilities;
