--- a/assets/css/_custom.css
+++ b/assets/css/_custom.css
@@ -9,3 +9,7 @@
 .stf-bg-3 {
     background-image: url('/assets/images/background-3.png');
 }
+
+.stf-nav-list-item:last-child .stf-nav-list-item-link {
+    padding-right: 0;
+}
