--- a/assets/css/_custom.css
+++ b/assets/css/_custom.css
@@ -10,6 +10,10 @@
     background-image: url('/assets/images/background-3.png');
 }
 
+.intro-section-image {
+    background-image: url('/assets/images/intro-section-image.png');
+}
+
 .stf-nav-list-item:last-child .stf-nav-list-item-link {
     padding-right: 0;
 }
