Finish MailChimp form

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,5 +3,6 @@
 @import './_typography.css';
 @import './_others.css';
 @import './_custom.css';
+@import './_responsive.css';
 @tailwind components;
 @tailwind utilities;
