--- a/assets/css/_custom.css
+++ b/assets/css/_custom.css
@@ -22,3 +22,23 @@
     max-width: 450px;
     width: 100%;
 }
+
+.mc-embedded-subscribe {
+    margin-left: -10%;
+    height: 35px;
+    width: 10%;
+    background-color: #2D5F6E;
+    color: white;
+    border: 0px none;
+    appearance: none;
+    font-family: roboto;
+    font-size: 13px;
+    border-radius: 0px 3px 3px 0px;
+    cursor: pointer;
+    position: absolute;
+}
+
+.mc-embedded-subscribe:hover {
+    color: #ffffff;
+    background-color: #454F37;
+}
