--- a/assets/css/_custom.css
+++ b/assets/css/_custom.css
@@ -9,10 +9,10 @@
 .stf-bg-3 {
     background-image: url('/assets/images/background-3.png');
 }
-
+/*
 .intro-section-image {
     background-image: url('/assets/images/intro-section-image.png');
-}
+}*/
 
 .stf-nav-list-item:last-child .stf-nav-list-item-link {
     padding-right: 0;
