--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,6 @@
 @import "../../node_modules/@fortawesome/fontawesome-free/css/all.css";
 
+@import './_fonts.css';
 @import './_typography.css';
 @import './_custom.css';
 @tailwind base;
