--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,8 +1,13 @@
-@import "../../node_modules/@fortawesome/fontawesome-free/css/all.css";
+/* fontawesome. */
+@import "@fortawesome/fontawesome-free/scss/brands";
+@import "@fortawesome/fontawesome-free/scss/regular";
+@import "@fortawesome/fontawesome-free/scss/solid";
+@import "@fortawesome/fontawesome-free/scss/fontawesome";
+/* end fontawesome. */
 
-@import './_fonts.css';
-@import './_typography.css';
-@import './_custom.css';
+@import './_fonts';
+@import './_typography';
+@import './_custom';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
