--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,4 +1,5 @@
 /* fontawesome. */
+$fa-font-path: "../webfonts";
 @import "@fortawesome/fontawesome-free/scss/brands";
 @import "@fortawesome/fontawesome-free/scss/regular";
 @import "@fortawesome/fontawesome-free/scss/solid";
