Tim's styling notes

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -27,8 +27,8 @@
     margin-left: -10%;
     height: 35px;
     width: 10%;
-    background-color: #2D5F6E;
-    color: white;
+    background-color: rgba(255, 255, 255, .6);
+    color: #366878;
     border: 0px none;
     appearance: none;
     font-family: roboto;
