--- a/assets/css/_typography.scss
+++ b/assets/css/_typography.scss
@@ -10,6 +10,6 @@
     text-shadow: -1px -1px 0px rgba(255, 255, 255);
 }
 
-.stf-text-shadow-gray-bottom-right {
-    text-shadow: 1px 1px 0px rgb(24, 96, 112);
+.stf-text-shadow-darkblue-bottom-right {
+    text-shadow: 1px 1px 0px rgba(54, 104, 120, 1);
 }
