Attempt to fix build js paths on netlify

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -9,19 +9,19 @@ body {
 }
 
 .stf-bg-1 {
-    background-image: url('/assets/images/background-1.png');
+    background-image: url('../images/background-1.png');
 }
 
 .stf-bg-2 {
-    background-image: url('/assets/images/background-2.png');
+    background-image: url('../images/background-2.png');
 }
 
 .stf-bg-3 {
-    background-image: url('/assets/images/background-3.png');
+    background-image: url('../images/background-3.png');
 }
 /*
 .intro-section-image {
-    background-image: url('/assets/images/intro-section-image.png');
+    background-image: url('../images/intro-section-image.png');
 }*/
 
 .stf-nav-list-item:last-child .stf-nav-list-item-link {
