More work on mobile nav

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -47,10 +47,10 @@ body {
     line-height: 1.8rem;
 }
 
-.section-connect-cta .social-buttons h3,
-.section-connect-cta .social-buttons ul {
-    float: right;
-}
+// .section-connect-cta .social-buttons h3,
+// .section-connect-cta .social-buttons ul {
+//     float: right;
+// }
 
 
 
