--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -47,13 +47,6 @@ body {
     line-height: 1.8rem;
 }
 
-// .section-connect-cta .social-buttons h3,
-// .section-connect-cta .social-buttons ul {
-//     float: right;
-// }
-
-
-
 .section-connect-cta .social-buttons li {
     background-color: #366878;
 }
@@ -70,13 +63,6 @@ body {
     color: #A9DDED;
 }
 
-
-
-
-
-
-
-
 .section-footer .social-buttons li {
     background-color: #FFFFFF;
 }
@@ -90,11 +76,8 @@ body {
 }
 
 .section-footer .social-buttons li:hover > a {
-    color: #A9DDED;
+    color: #FFFFFF;
 }
-
-
-
 
 .section-footer .social-buttons h3,
 .section-footer .social-buttons ul {
@@ -129,9 +112,31 @@ body {
 
 
 /****** Media Queries********/
-@media screen and (max-width: 768px) {
-    .site-logo-container {
-        max-width: 12rem;
+
+
+
+
+@media screen and (max-width: 301px) {
+    .mc-embedded-subscribe {
+        margin-left: -30%;
+        width: 30%;
     }
 }
 
+@media screen and (min-width: 301px) and (max-width: 639px) {
+    .mc-embedded-subscribe {
+        margin-left: -25%;
+        width: 25%;
+    }
+}
+
+@media screen and (min-width: 640px) and (max-width: 767px) {
+    .site-logo-container {
+        max-width: 12rem;
+    }
+
+    .mc-embedded-subscribe {
+        margin-left: -20%;
+        width: 20%;
+    }
+}
