--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -8,6 +8,7 @@
 @import './_fonts';
 @import './_typography';
 @import './_custom';
+@import './_responsive';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
