Remove images from testimonials

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -10,14 +10,20 @@ body {
 
 .stf-bg-1 {
     background-image: url('../images/background-1.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .stf-bg-2 {
     background-image: url('../images/background-2.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .stf-bg-3 {
     background-image: url('../images/background-3.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 /*
 .intro-section-image {
