--- a/assets/css/_responsive.scss
+++ b/assets/css/_responsive.scss
@@ -4,12 +4,20 @@
         margin-left: -30%;
         width: 30%;
     }
+
+    .wrapper-sidebar {
+        margin-top: 5rem;
+    }
 }
 
 @media screen and (min-width: 301px) and (max-width: 639px) {
     .mc-embedded-subscribe {
         margin-left: -25%;
         width: 25%;
+    }
+
+    .wrapper-sidebar {
+        margin-top: 5rem;
     }
 }
 
