Events: add UPCOMING badge to upcoming events

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -132,3 +132,14 @@ li.stf-main-nav-list-item a:hover::after {
     padding-left: 20px;
     margin: 0;
 }
+
+.card-event--image {
+    display: block;
+    position: relative;
+
+    .event-badge {
+        position: absolute;
+        margin-top: -40px;
+        right: 10px;
+    }
+}
