More styling work on contact form

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -172,6 +172,7 @@ li.stf-main-nav-list-item a:hover::after {
         appearance: none;
         background-color: #fff;
         border-width: 1px;
+        border-radius: 3px;
         padding-top: 0.5rem;
         padding-right: 0.75rem;
         padding-bottom: 0.5rem;
@@ -182,6 +183,7 @@ li.stf-main-nav-list-item a:hover::after {
         appearance: none;
         cursor: pointer;
         border-width: 1px;
+        border-radius: 3px;
         padding-left: 20px;
         height: 35px;
         padding-right: 20px;
