Replace darkblue color with #2D5F6E

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -59,7 +59,7 @@ li.stf-main-nav-list-item a:hover::after {
     height: 35px;
     width: 10%;
     background-color: rgba(255, 255, 255, .6);
-    color: #366878;
+    color: #2D5F6E;
     border: 0px none;
     appearance: none;
     font-family: roboto;
@@ -74,7 +74,7 @@ li.stf-main-nav-list-item a:hover::after {
 }
 
 .section-connect-cta .social-buttons li {
-    background-color: #366878;
+    background-color: #2D5F6E;
 }
 
 .section-connect-cta .social-buttons li > a {
@@ -94,7 +94,7 @@ li.stf-main-nav-list-item a:hover::after {
 }
 
 .section-footer .social-buttons li > a {
-    color: #366878;
+    color: #2D5F6E;
 }
 
 .section-footer .social-buttons li:hover {
