--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -140,8 +140,10 @@ li.stf-main-nav-list-item a:hover::after {
 
     .event-badge {
         position: absolute;
-        margin-top: -40px;
-        right: 10px;
+        top: 0;
+        margin-top: 1rem;
+        left: -1rem;
+        box-shadow: 2px 2px 0px rgba(201, 39, 62, 0.5);
     }
 }
 
