Fix broken wysiwyg text on certain pages && run build

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -202,3 +202,9 @@ li.stf-main-nav-list-item a:hover::after {
         padding-right: 20px;
     }
 }
+
+.review-text {
+    p {
+        display: inline;
+    }
+}
