--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -58,16 +58,20 @@ li.stf-main-nav-list-item a:hover::after {
     margin-left: -10%;
     height: 35px;
     width: 10%;
-    background-color: rgba(255, 255, 255, .6);
-    color: #2D5F6E;
-    border: 0px none;
     appearance: none;
-    font-family: roboto;
     font-size: 13px;
     border-radius: 0px 3px 3px 0px;
     cursor: pointer;
     position: absolute;
 }
+
+// .mc-embedded-subscribe-form {
+//     input::placeholder,
+//     textarea::placeholder {
+//         opacity: 1;
+//         color: #a1a1aa;
+//     }
+// }
 
 .section-connect-cta i.fab {
     line-height: 1.8rem;
