--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -65,13 +65,11 @@ li.stf-main-nav-list-item a:hover::after {
     position: absolute;
 }
 
-// .mc-embedded-subscribe-form {
-//     input::placeholder,
-//     textarea::placeholder {
-//         opacity: 1;
-//         color: #a1a1aa;
-//     }
-// }
+input.mc-email-field::placeholder {
+    color: rgba(255, 255, 255, 0.9) !important;
+    opacity: 0.9 !important;
+    color: #ffffff !important;
+}
 
 .section-connect-cta i.fab {
     line-height: 1.8rem;
@@ -157,7 +155,7 @@ li.stf-main-nav-list-item a:hover::after {
         position: absolute;
         top: 0;
         margin-top: 1rem;
-        left: -1rem;
+        left: -2rem;
         box-shadow: 2px 2px 0px rgba(201, 39, 62, 0.5);
     }
 }
